# Nyra-Framework

./: README.md
agents/: .gitignore  (+2 more)
agents/nyra_packages/extension/cosy_tts_python/: BUILD.gn  addon.py  cosy_tts.py  extension.py  manifest.json
nyra_packages/system/nyra_runtime/: BUILD.gn  manifest.json
nyra_packages/system/nyra_runtime/.ten/package_info/: installed_paths.json
nyra_packages/system/nyra_runtime/include/ten_runtime/: ten.h  ten_config.h
nyra_packages/system/nyra_runtime/include/ten_runtime/addon/: addon.h  addon_manager.h
nyra_packages/system/nyra_runtime/include/ten_runtime/addon/extension/: extension.h
nyra_packages/system/nyra_runtime/include/ten_runtime/app/: app.h
nyra_packages/system/nyra_runtime/include/ten_runtime/binding/: common.h
nyra_packages/system/nyra_runtime/include/ten_runtime/binding/cpp/: ten.h
nyra_packages/system/nyra_runtime/include/ten_runtime/binding/cpp/detail/: addon.h  addon_manager.h  app.h  common.h  extension.h  extension_impl.h  ten_env.h  ten_env_impl.h  ten_env_proxy.h
nyra_packages/system/nyra_runtime/include/ten_runtime/binding/cpp/experimental/: ten_client_proxy.h
nyra_packages/system/nyra_runtime/include/ten_runtime/common/: errno.h  status_code.h
nyra_packages/system/nyra_runtime/include/ten_runtime/extension/: extension.h
nyra_packages/system/nyra_runtime/include/ten_runtime/msg/: msg.h
nyra_packages/system/nyra_runtime/include/ten_runtime/msg/audio_frame/: audio_frame.h
nyra_packages/system/nyra_runtime/include/ten_runtime/msg/cmd/: cmd.h
nyra_packages/system/nyra_runtime/include/ten_runtime/msg/cmd/close_app/: cmd.h
nyra_packages/system/nyra_runtime/include/ten_runtime/msg/cmd/start_graph/: cmd.h
nyra_packages/system/nyra_runtime/include/ten_runtime/msg/cmd/stop_graph/: cmd.h
nyra_packages/system/nyra_runtime/include/ten_runtime/msg/cmd_result/: cmd_result.h
nyra_packages/system/nyra_runtime/include/ten_runtime/msg/data/: data.h
nyra_packages/system/nyra_runtime/include/ten_runtime/msg/video_frame/: video_frame.h
nyra_packages/system/nyra_runtime/include/ten_runtime/protocol/: close.h  protocol.h
nyra_packages/system/nyra_runtime/include/ten_runtime/ten_env/: ten_env.h
nyra_packages/system/nyra_runtime/include/ten_runtime/ten_env/internal/: log.h  metadata.h  on_xxx_done.h  return.h  send.h
nyra_packages/system/nyra_runtime/include/ten_runtime/ten_env_proxy/: ten_env_proxy.h
nyra_packages/system/nyra_runtime/include/ten_runtime/test/: env_tester.h  env_tester_proxy.h  extension_tester.h
nyra_packages/system/nyra_runtime/include/ten_runtime/timer/: timer.h
nyra_packages/system/nyra_runtime/include/ten_utils/: ten_config.h
nyra_packages/system/nyra_runtime/include/ten_utils/backtrace/: backtrace.h
nyra_packages/system/nyra_runtime/include/ten_utils/container/: hash_bucket.h  hash_handle.h  hash_table.h  list.h  list_int32.h  list_node.h  list_node_int32.h  list_node_ptr.h  list_node_smart_ptr.h  list_node_str.h  list_ptr.h  list_smart_ptr.h  list_str.h  vector.h
nyra_packages/system/nyra_runtime/include/ten_utils/http/: http.h
nyra_packages/system/nyra_runtime/include/ten_utils/io/: async.h  mmap.h  network.h  runloop.h  shmchannel.h  socket.h  stream.h  transport.h
nyra_packages/system/nyra_runtime/include/ten_utils/jni/: env.h  ref.h
nyra_packages/system/nyra_runtime/include/ten_utils/lang/cpp/io/: runloop.h  transport.h
nyra_packages/system/nyra_runtime/include/ten_utils/lang/cpp/lib/: buf.h  error.h  string.h  value.h
nyra_packages/system/nyra_runtime/include/ten_utils/lib/: align.h  alloc.h  atomic.h  atomic_ptr.h  base64.h  buf.h  cond.h  error.h  event.h  file.h  file_lock.h  getoptlong.h  json.h  module.h  mutex.h  path.h  process_mutex.h  ptr.h  random.h  ref.h  reflock.h  rwlock.h  shared_event.h  shm.h  signature.h  sm.h  smart_ptr.h  spinlock.h  string.h  task.h  terminal.h  thread.h  thread_local.h  thread_once.h  time.h  typed_list.h  typed_list_node.h  uri.h  uuid.h  waitable_addr.h  (+2 more)
nyra_packages/system/nyra_runtime/include/ten_utils/log/: log.h
nyra_packages/system/nyra_runtime/include/ten_utils/macro/: check.h  ctor.h  expand.h  field.h  macros.h  mark.h  memory.h
nyra_packages/system/nyra_runtime/include/ten_utils/sanitizer/: memory_check.h  thread_check.h
nyra_packages/system/nyra_runtime/include/ten_utils/value/: type.h  type_operation.h  value.h  value_get.h  value_is.h  value_json.h  value_kv.h  value_merge.h  value_object.h  value_string.h
nyra_packages/system/nyra_runtime_go/: BUILD.gn  manifest.json
nyra_packages/system/nyra_runtime_go/.ten/package_info/: installed_paths.json
nyra_packages/system/nyra_runtime_go/interface/: go.mod
nyra_packages/system/nyra_runtime_go/interface/ten/: addon.go  addon.h  addon_manager.go  app.go  app.h  audio_frame.go  audio_frame.h  audio_frame_test.go  base.go  base_dev.go  base_release.go  bytes.go  bytes_test.go  cgo_helper.go  cmd.go  cmd.h  cmd_result.go  cmd_test.go  common.go  common.h  concurrent_map.go  data.go  data.h  error.go  extension.go  extension.h  extension_tester.go  extension_tester.h  globals.go  handle.go  log_level.go  msg.go  msg.h  msg_property.go  msg_test.go  pools.go  pools_test.go  prop.go  prop_test.go  ten_env.go  (+12 more)
nyra_packages/system/nyra_runtime_python/: BUILD.gn  manifest.json
nyra_packages/system/nyra_runtime_python/.ten/package_info/: installed_paths.json
nyra_packages/system/nyra_runtime_python/interface/ten/: __init__.py  addon.py  addon_manager.py  app.py  async_extension.py  async_ten_env.py  audio_frame.py  cmd.py  cmd_result.py  data.py  error.py  extension.py  libten_runtime_python.pyi  log_level.py  ten_env.py  ten_env_attach_to_enum.py  ten_env_base.py  test.py
nyra_packages/system/nyra_runtime_python/tools/: deps_resolver.py
(+187 files in other folders)
