#
# This file is part of NYRA Framework, an open source project.
# Licensed under the Apache License, Version 2.0.
# See the LICENSE file for more information.
#
import("//build/feature/nyra_package.gni")

nyra_package("cosy_tts_python") {
  package_kind = "extension"

  resources = [
    "__init__.py",
    "addon.py",
    "extension.py",
    "manifest.json",
    "property.json",
    "tests",
  ]
}
